syntax = "proto3";

option java_package = "com.example.protobuftask.model";
option java_multiple_files = true;

message UserItemsProto{
  repeated UsersProto users = 1;
}

message UsersProto{
  int64 id = 1;
  string name = 2;
  string username = 3;
  string email = 4;
  AddressProto address = 5;
  string phone = 6;
  string website = 7;
  CompanyProto company = 8;
}

message AddressProto{
  string street = 1;
  string suite = 2;
  string city = 3;
  string zipcode = 4;
  GeoProto geo = 5;
}

message GeoProto{
  string lat = 1;
  string lng = 2;
}

message CompanyProto{
  string name = 1;
  string catchPhrase = 2;
  string bs = 3;
}

